refactor: Project structure redo
This overhauls the entire project's structure, such that all types
of builds will now work correctly (compiles/webpack).

Added linting, using ESLint.

VSCode is now able to build, test, and debug project. Fixes #79.

Signed-off-by: Joseph Benden <joe@benden.us>

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,9 @@ insert_final_newline = true
 
 [package.json]
 indent_size = 2
+
+[tsconfig*]
+indent_style = tab
+
+[*webpack*]
+indent_style = tab
