--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,98 +1,36 @@
 {
+	// See https://go.microsoft.com/fwlink/?LinkId=733558
+	// for the documentation about the tasks.json format
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "compile",
-			"dependsOn": [
-				"compile:client",
-				"compile:server"
-			],
-			"problemMatcher": []
-		},
-		{
-			"label": "compile:client",
 			"type": "npm",
-			"script": "compile:client",
-			"group": "build",
-			"presentation": {
-				"panel": "dedicated",
-				"reveal": "never"
-			},
-			"problemMatcher": [
-				"$tsc"
-			]
-		},
-		{
-			"label": "compile:server",
-			"type": "npm",
-			"script": "compile:server",
-			"group": "build",
-			"presentation": {
-				"panel": "dedicated",
-				"reveal": "never"
-			},
-			"problemMatcher": [
-				"$tsc"
-			]
-		},
-		{
-			"label": "watch",
-			"dependsOn": [
-				"watch:client",
-				"watch:server"
-			],
+			"script": "watch",
+			"isBackground": true,
 			"group": {
 				"kind": "build",
 				"isDefault": true
 			},
-			"problemMatcher": []
-		},
-		{
-			"label": "watch:client",
-			"type": "npm",
-			"script": "watch:client",
-			"isBackground": true,
-			"group": "build",
 			"presentation": {
-				"panel": "dedicated",
-				"reveal": "never"
+				"reveal": "never",
+				"panel": "dedicated"
 			},
 			"problemMatcher": [
 				"$tsc-watch"
 			]
 		},
 		{
-			"label": "watch:server",
 			"type": "npm",
-			"script": "watch:server",
-			"isBackground": true,
+			"script": "compile",
+			"isBackground": false,
 			"group": "build",
 			"presentation": {
-				"panel": "dedicated",
-				"reveal": "never"
+				"reveal": "never",
+				"panel": "dedicated"
 			},
 			"problemMatcher": [
-				"$tsc-watch"
+				"$tsc"
 			]
-        },
-        {
-            "label": "test",
-            "type": "npm",
-            "script": "test",
-			"dependsOn": [
-                "compile:server",
-                "compile:client"
-			],
-			"group":{
-                "kind": "test",
-                "isDefault": true
-            },
-            "presentation": {
-                "echo": true,
-                "reveal": "always",
-                "focus": false,
-                "panel": "shared"
-            }
-        }
+		}
 	]
 }
