--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "email": "joe@benden.us"
   },
   "homepage": "https://github.com/jbenden/vscode-c-cpp-flylint/blob/master/README.md",
-  "main": "./dist/extension.js",
+  "main": "./client/out/extension",
   "engines": {
-    "vscode": "^1.44.0"
+    "vscode": "^1.52.0"
   },
   "categories": [
     "Programming Languages",
@@ -42,46 +42,56 @@
     "linter"
   ],
   "scripts": {
-    "compile": "npm run compile:server && npm run compile:client",
-    "compile:client": "tsc -p client/tsconfig.json && npm run webpack",
-    "compile:server": "cd server && npm run compile && cd ..",
-    "test": "cd server && npm test && cd ..",
-    "vscode:prepublish": "npm run compile:server && npm run compile:client",
-    "webpack": "webpack --mode production",
-    "webpack:watch": "webpack --mode development --watch"
+    "vscode:prepublish": "npm run webpack",
+    "webpack": "npm run clean && webpack --mode production --config ./client/webpack.config.js && webpack --mode production --config ./server/webpack.config.js",
+    "webpack:dev": "npm run clean && webpack --mode none --config ./client/webpack.config.js && webpack --mode none --config ./server/webpack.config.js",
+    "compile": "tsc -b",
+    "compile:client": "tsc -b ./client/tsconfig.json",
+    "compile:server": "tsc -b ./server/tsconfig.json",
+    "watch": "tsc -b -w",
+    "lint": "npm run lint:client && npm run lint:server",
+    "lint:client": "eslint --config ./client/.eslintrc.json ./client/src/*.ts",
+    "lint:server": "eslint --config ./server/.eslintrc.json ./server/src/**/*.ts",
+    "clean": "rimraf client/out && rimraf server/out",
+    "test": "npm run compile:server && cd server && npm test && cd ..",
+    "postinstall": "cd client && npm install && cd ../server && npm install && cd .."
   },
   "devDependencies": {
-    "@testdeck/mocha": "^0.1.0",
-    "@types/chai": "^4.1.3",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/lodash": "^4.14.167",
-    "@types/mock-fs": "^3.6.30",
-    "@types/node": "^13.7.0",
+    "@testdeck/mocha": "^0.1.2",
+    "@types/chai": "^4.2.14",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/lodash": "^4.14.168",
+    "@types/mock-fs": "^4.13.0",
+    "@types/node": "^13.13.40",
     "@types/tmp": "^0.2.0",
-    "@types/vscode": "^1.41.0",
-    "chai": "^4.1.2",
+    "@types/vscode": "^1.52.0",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^7.1.2",
-    "mock-fs": "^4.5.0",
+    "eslint": "^7.15.0",
+    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "merge-options": "^3.0.4",
+    "mocha": "^8.2.1",
+    "mock-fs": "^4.13.0",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.16",
-    "ts-loader": "^6.2.2",
-    "typescript": "^3.7.5",
-    "vscode-test": "^1.3.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
+    "vscode-test": "^1.5.0",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
-    "cross-spawn": "^6.0.5",
-    "fast-glob": "^2.2.6",
-    "lodash": "^4.17.19",
-    "slash": "^2.0.0",
-    "tmp": "^0.0.33",
+    "cross-spawn": "^7.0.3",
+    "fast-glob": "^3.2.5",
+    "lodash": "^4.17.20",
+    "slash": "^3.0.0",
+    "tmp": "^0.2.1",
     "var-expansion": "^0.1.0",
-    "vscode-languageclient": "^5.1.0",
-    "vscode-languageserver-protocol": "^3.13.0",
-    "vscode-languageserver": "^5.1.0",
-    "vscode-uri": "^2.0.3",
-    "which": "^1.3.0"
+    "vscode-languageclient": "^7.0.0",
+    "vscode-languageserver": "^7.0.0",
+    "vscode-uri": "^3.0.2",
+    "which": "^2.0.2"
   },
   "activationEvents": [
     "onCommand:c-cpp-flylint.analyzeActiveDocument",
