--- a/server/package.json
+++ b/server/package.json
@@ -13,35 +13,33 @@
     "node": "*"
   },
   "dependencies": {
-    "cross-spawn": "^6.0.5",
-    "fast-glob": "^2.2.6",
-    "lodash": "^4.17.19",
-    "slash": "^2.0.0",
-    "tmp": "^0.0.33",
+    "cross-spawn": "^7.0.3",
+    "fast-glob": "^3.2.5",
+    "lodash": "^4.17.20",
+    "slash": "^3.0.0",
+    "tmp": "^0.2.1",
     "var-expansion": "^0.1.0",
-    "vscode-languageserver": "^5.1.0",
-    "vscode-languageserver-protocol": "^3.13.0",
-    "vscode-uri": "^2.0.3",
-    "which": "^1.3.0"
+    "vscode-languageserver": "^7.0.0",
+    "vscode-languageserver-textdocument": "^1.0.1",
+    "vscode-uri": "^3.0.2",
+    "which": "^2.0.2"
   },
   "devDependencies": {
-    "@testdeck/mocha": "^0.1.0",
-    "@types/chai": "^4.0.4",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/cross-spawn": "^6.0.0",
-    "@types/mock-fs": "^3.6.30",
-    "@types/node": "^13.7.0",
-    "chai": "^4.1.2",
+    "@testdeck/mocha": "^0.1.2",
+    "@types/chai": "^4.2.14",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/cross-spawn": "^6.0.2",
+    "@types/mock-fs": "^4.13.0",
+    "@types/node": "^13.13.40",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^7.1.2",
-    "mock-fs": "^4.5.0",
-    "typescript": "^3.7.5",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "mocha": "^8.2.1",
+    "mock-fs": "^4.13.0",
+    "typescript": "^4.1.2",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
   },
   "scripts": {
-    "compile": "npm run installServer && webpack --config webpack.config-server.js",
-    "installServer": "node ./customInstallServerIntoExtension.js ../client ./package.json ./tsconfig.json ./package-lock.json",
-    "test": "tsc -p ./ && mocha --color ../client/server/linters/tests/*.test.js"
+    "test": "mocha --colors out/linters/tests/*.test.js"
   }
 }
