--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,7 @@
 ---
-engines:
+version: 2
+
+plugins:
   duplication:
     enabled: true
     config:
@@ -16,16 +18,33 @@ engines:
     enabled: true
   radon:
     enabled: true
-ratings:
-  paths:
-  - "client/src/**/*"
-  - "server/src/**/*"
-  - "**/package.json"
-  - "**/README.md"
-  - "**/CHANGELOG.md"
-exclude_paths:
+
+checks:
+  argument-count:
+    config:
+      threshold: 4
+  complex-logic:
+    config:
+      threshold: 4
+  file-lines:
+    config:
+      threshold: 500
+  method-complexity:
+    config:
+      threshold: 15
+  method-count:
+    config:
+      threshold: 20
+  method-lines:
+    config:
+      threshold: 50
+
+exclude_patterns:
   - "**/node_modules/**/*"
   - "**/out/**/*"
+  - "**/dist/**/*"
+  - "**/.vscode/**/*"
+  - "**/.vscode-test/**/*"
   - "client/server/**/*"
   - "**/.git/**/*"
   - "**/webpack.config.js"
