--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@types/cross-spawn": "^6.0.2",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "^13.13.40",
+    "@types/vscode": "^1.52.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^8.2.1",
