--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "compile": "tsc -b",
     "compile:client": "tsc -b ./client/tsconfig.json",
     "compile:server": "tsc -b ./server/tsconfig.json",
+    "compile:specs": "tsc -b ./specs/tsconfig.json",
     "watch": "tsc -b -w",
     "lint": "npm run lint:client && npm run lint:server",
     "lint:client": "eslint --config ./client/.eslintrc.json ./client/src/*.ts",
     "lint:server": "eslint --config ./server/.eslintrc.json ./server/src/**/*.ts",
     "clean": "rimraf client/out && rimraf server/out",
+    "spec": "npm run compile && npm run compile:specs && node specs/out/runSpecs.js",
     "test": "npm run compile:server && cd server && npm test && cd ..",
     "postinstall": "cd client && npm install && cd ../server && npm install && cd .."
   },
@@ -61,14 +63,17 @@
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/lodash": "^4.14.168",
+    "@types/mocha": "^9.0.0",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "^13.13.40",
     "@types/tmp": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "@vscode/test-electron": "^1.6.2",
+    "@types/vscode": "^1.52.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.15.0",
-    "@typescript-eslint/parser": "^4.9.1",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
     "merge-options": "^3.0.4",
     "mocha": "^8.2.1",
     "mock-fs": "^4.13.0",
