--- a/package.json
+++ b/package.json
@@ -67,15 +67,16 @@
     "@types/mock-fs": "^4.13.0",
     "@types/node": "^13.13.40",
     "@types/tmp": "^0.2.0",
+    "@types/vscode": "^1.52.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "@vscode/test-electron": "^1.6.2",
-    "@types/vscode": "^1.52.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.15.0",
     "merge-options": "^3.0.4",
     "mocha": "^8.2.1",
+    "mocha-cakes-2": "^3.3.0",
     "mock-fs": "^4.13.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.16",
