feat: Add e2e Jest-based testing
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "vscode:prepublish": "npm run webpack",
     "webpack": "npm run clean && webpack --mode production --config ./client/webpack.config.js && webpack --mode production --config ./server/webpack.config.js",
     "webpack:dev": "npm run clean && webpack --mode none --config ./client/webpack.config.js && webpack --mode none --config ./server/webpack.config.js",
-    "compile": "tsc -b",
+    "compile": "npm run compile:server && npm run compile:client && npm run compile:specs",
     "compile:client": "tsc -b ./client/tsconfig.json",
     "compile:server": "tsc -b ./server/tsconfig.json",
     "compile:specs": "tsc -b ./specs/tsconfig.json",
@@ -53,17 +53,29 @@
     "lint": "npm run lint:client && npm run lint:server",
     "lint:client": "eslint --config ./client/.eslintrc.json ./client/src/*.ts",
     "lint:server": "eslint --config ./server/.eslintrc.json ./server/src/**/*.ts",
-    "clean": "rimraf client/out && rimraf server/out",
-    "spec": "npm run compile && npm run compile:specs && node specs/out/runSpecs.js",
-    "test": "npm run compile:server && cd server && npm test && cd ..",
+    "clean": "rimraf client/out && rimraf server/out && rimraf spec/out",
+    "spec": "npm run compile && node specs/out/runSpecs.js",
+    "test": "npm run clean && npm run spec",
     "postinstall": "cd client && npm install && cd ../server && npm install && cd .."
   },
+  "jest": {
+    "preset": "ts-jest",
+    "verbose": true,
+    "testEnvironment": "vscode",
+    "testMatch": [
+      "**/*.spec.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "out",
+      "sample",
+      "dist",
+      ".vscode-test"
+    ]
+  },
   "devDependencies": {
-    "@testdeck/mocha": "^0.1.2",
-    "@types/chai": "^4.2.14",
-    "@types/chai-as-promised": "^7.1.3",
+    "@jest/test-result": "^26.6.2",
+    "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
-    "@types/mocha": "^9.0.0",
     "@types/mock-fs": "^4.13.0",
     "@types/node": "^13.13.40",
     "@types/tmp": "^0.2.0",
@@ -71,15 +83,15 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "@vscode/test-electron": "^1.6.2",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "eslint": "^7.15.0",
+    "jest": "^27.3.1",
+    "jest-cli": "^27.3.1",
+    "jest-environment-vscode": "^1.0.0",
     "merge-options": "^3.0.4",
-    "mocha": "^8.2.1",
-    "mocha-cakes-2": "^3.3.0",
     "mock-fs": "^4.13.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.16",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "vscode-test": "^1.5.0",
