--- a/specs/tsconfig.json
+++ b/specs/tsconfig.json
@@ -1,17 +1,17 @@
 {
 	"extends": "../tsconfig.base.json",
 	"compilerOptions": {
-		"target": "es2017",
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"sourceMap": true,
+		"target": "es2017",
 		"outDir": "out",
-		"rootDir": ".",
-		"lib": [ "es2017" ]
+		"rootDir": "..",
+		"lib": [ "es2017" ],
+		"sourceMap": true
 	},
 	"include": [
 		".",
-		"typings.d.ts"
+		"../typings.d.ts"
 	],
 	"exclude": [
 		"node_modules"
