fix(ci): Use xvfb under Linux
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
     - run: npm ci
     - run: npm run lint --if-present
     - run: npm run compile --if-present
+    - run: xvfb-run -a npm test
+      if: runner.os == 'Linux'
     - run: npm test
-      env:
-        TRAVIS: true
+      if: runner.os != 'Linux'
