chore(tests): add eslint
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "compile:server": "tsc -b ./server/tsconfig.json",
     "compile:specs": "tsc -b ./specs/tsconfig.json",
     "watch": "tsc -b -w",
-    "lint": "npm run lint:client && npm run lint:server",
+    "lint": "npm run lint:client && npm run lint:server && npm run lint:specs",
     "lint:client": "eslint --config ./client/.eslintrc.json ./client/src/*.ts",
     "lint:server": "eslint --config ./server/.eslintrc.json ./server/src/**/*.ts",
+    "lint:specs": "eslint --config ./specs/.eslintrc.json ./specs/**/*.ts",
     "clean": "rimraf client/out && rimraf server/out && rimraf specs/out",
     "spec": "npm run compile && node specs/out/specs/runSpecs.js",
     "test": "npm run clean && npm run spec",
