Jest, ignore the ex1 folder
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
       "out",
       "sample",
       "dist",
-      ".vscode-test"
+      ".vscode-test",
+      "ex1"
     ]
   },
   "devDependencies": {
