--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,19 +14,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 12.x
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@v3
+    - name: Use Node.js 16
+      uses: actions/setup-node@v3
       with:
-        node-version: 12.x
+        node-version: 16
     - run: npm install
     - name: Publish to Open VSX Registry
-      uses: HaaLeo/publish-vscode-extension@v0
+      uses: HaaLeo/publish-vscode-extension@v1
       id: publishToOpenVSX
       with:
         pat: ${{ secrets.OPEN_VSX_TOKEN }}
     - name: Publish to Visual Studio Marketplace
-      uses: HaaLeo/publish-vscode-extension@v0
+      uses: HaaLeo/publish-vscode-extension@v1
       with:
         pat: ${{ secrets.VSCE_TOKEN }}
         registryUrl: https://marketplace.visualstudio.com
