chore: add REUSE support
Add support for REUSE[1] specification.

[1]: https://reuse.software/spec/

Signed-off-by: Joseph Benden <joe@benden.us>

--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
+      - name: REUSE Compliance Check
+        uses: fsfe/reuse-action@v1
       - run: npm ci
       - run: make
       - run: git diff --exit-code
