ci: enable code coverage via Jest
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "jest": {
     "preset": "ts-jest",
     "verbose": true,
+    "collectCoverage": true,
     "testEnvironment": "vscode",
     "testMatch": [
       "**/*.spec.ts"
