--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,9 +14,18 @@ on:
     - cron: "30 5 * * 1"
 
 jobs:
+  legal:
+    name: REUSE Specification
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: REUSE Compliance Check
+        uses: fsfe/reuse-action@v1
+
   build-lint-test:
     name: Node ${{ matrix.node }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
+    needs: legal
     timeout-minutes: 10
     strategy:
       fail-fast: true
@@ -41,8 +50,6 @@ jobs:
         if: runner.os == 'Linux'
       - name: Checkout Source
         uses: actions/checkout@v3
-      - name: REUSE Compliance Check
-        uses: fsfe/reuse-action@v1
       - name: Install Node ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
