ci: disable Windows
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,7 +33,7 @@ jobs:
         os:
           - ubuntu-latest
           - macos-latest
-          - windows-latest
+          # - windows-latest
         node:
           - 16
           - 18
