--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "lodash": "^4.17.21",
     "slash": "^3.0.0",
     "tmp": "^0.2.1",
+    "unixify": "^1.0.0",
     "var-expansion": "^0.1.0",
     "vscode-languageclient": "^7.0.0",
     "vscode-languageserver": "^7.0.0",
