--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "slash": "^3.0.0",
     "tmp": "^0.2.1",
+    "unixify": "^1.0.0",
     "var-expansion": "^0.1.0",
     "vscode-languageserver": "^7.0.0",
     "vscode-languageserver-textdocument": "^1.0.1",
