--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,7 +3,7 @@ name: Build, Analyze, Test and Deploy
 on:
   push:
     branches:
-      - "*"
+      - main
   pull_request:
     branches:
       - main
