--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -6,23 +6,28 @@ on:
       - package.json
       - package-lock.json
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   checks:
     name: Check 4 Changes
     runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - name: REUSE Compliance Check
         uses: fsfe/reuse-action@v1
       - run: npm ci
-      - run: make
       - run: git diff --exit-code
 
   automerge:
     name: Auto Merge Pull Request
     runs-on: ubuntu-latest
     needs: checks
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - name: automerge
         uses: pascalgn/automerge-action@v0.15.3
