--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -67,7 +67,7 @@ jobs:
         run: xvfb-run "--server-args=-screen 0 1024x768x24" -a npm test
         if: runner.os == 'Linux'
       - name: Upload Coverage Report
-        uses: coverallsapp/github-action@1.2.5
+        uses: coverallsapp/github-action@v1.2.5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
@@ -91,7 +91,7 @@ jobs:
     needs: build-lint-test
     steps:
       - name: Let Coveralls know that all tests have finished
-        uses: coverallsapp/github-action@1.2.5
+        uses: coverallsapp/github-action@v1.2.5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
